--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,17 @@ name = "pypi"
 
 [packages]
 parse = "*"
+faker = "*"
+isort = "*"
+pytest = "*"
 
 [dev-packages]
-black = "*"
-flake8 = "*"
-pytest = "*"
 isort = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
