--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: check-yaml
       - id: check-ast
-      - id: end-of-file-fixer
+      # - id: end-of-file-fixer
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-shebang-scripts-are-executable
