--- a/Pipfile
+++ b/Pipfile
@@ -9,12 +9,10 @@ isort = "*"
 pytest = "*"
 
 [dev-packages]
-isort = "*"
-flake8 = "*"
-black = "*"
+ruff = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.12"
 
 [pipenv]
 allow_prereleases = true
